# WavPack

./: .gitignore  .travis.yml  CMakeLists.txt
src/: common_utils.c  decorr_utils.c  entropy_utils.c  extra1.c  extra2.c  open_filename.c  open_raw.c  open_utils.c  pack.c  pack_utils.c  wavpack_local.h  write_words.c
wavpackdll/: wavpack.def
